gcc/testsuite/rust/rustc/ui/resolve/resolve-conflict-type-vs-import.rs
use std::slice::Iter;

struct Iter;
// { dg-error ".E0255." "" { target *-*-* } .-1 }

fn main() {
}

